--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "rquery",
-  "private": true,
+  "name": "react-query-project",
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@uidotdev/react-query-api": "^0.1.18",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.10.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-query": "^4.0.0-beta.3",
+    "react-router-dom": "^6.1.1"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "@vitejs/plugin-react": "^1.0.0",
+    "vite": "^2.6.4"
   }
 }
